# dns-load-balancer

./: Cargo.toml  Dockerfile  README.md  config.yaml  dns-load-balancer.toml  dnsloadbalancer  rc.conf
.github/workflows/: rust.yaml
src/: config.rs  main.rs  server.rs
src/dns/: cache.rs  mod.rs  query.rs
