[package]
name = "dns_load_balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hickory-proto = "0.24.1"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26.0", features = ["default"] }
toml = "0.8"
webpki-roots = "0.26.6"
